# kaya-sw-camera_qa_studio

./: .gitignore  CMakeLists.txt  README.md  RawPixelModel.cpp  RawPixelModel.h  kaya-sw-camera_qa_studio.pro  publish_release.pro
docs/: README.md  _config.yml  cli.md  index.md
docs/assets/css/: custom.css  style.scss
release/: notes.md  release_input.json
scripts/: build_publish_release_studio.cmd  publish_release_studio.ps1
src/: Main.qml  RawPixelModel.cpp  RawPixelModel.h  main.cpp  qml.qrc
